--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Room</title>
+    <link rel="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
