--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oldroblox Chat</title>
-    <link rel="image/png" href="favicon.png">
+    <link type="image/png" rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
